--- a/tictactoe/pubspec.yaml
+++ b/tictactoe/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_sound_lite: ^5.0.0
+  # flutter_sound_lite: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +49,7 @@ flutter:
   assets:
     - images/icon-o.png
     - images/icon-x.png
-    - images/Ding-sound-effect.mp3
+    # - images/Ding-sound-effect.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
