--- a/tictactoe/pubspec.yaml
+++ b/tictactoe/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  shared_preferences: ^0.5.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
